
cmake_minimum_required(VERSION 3.15)

project(ORE-SWIG)

#add_subdirectory(QuantExt-SWIG/Python) 
#add_subdirectory(OREData-SWIG/Python) 
add_subdirectory(OREAnalytics-SWIG/Python) 
#add_subdirectory(OREAnalytics-SWIG/Java) 
#add_subdirectory(QuantExt-SWIG/Java) 
#add_subdirectory(OREData-SWIG/Java)
